[gd_scene load_steps=26 format=3 uid="uid://5pstw7o6n8sx"]

[ext_resource type="Shader" uid="uid://gvcvqv5uohx3" path="res://shaders/checker.gdshader" id="1_0bf2s"]
[ext_resource type="Script" uid="uid://dejw6e4hh8vg2" path="res://scripts/obstacle_spawner.gd" id="2_i34kh"]
[ext_resource type="Script" uid="uid://baiydmly1ugw8" path="res://scripts/sphere.gd" id="4_vq85a"]
[ext_resource type="PackedScene" uid="uid://1ed0pclwtoqy" path="res://assets/newknight.tscn" id="5_0d4o2"]
[ext_resource type="Script" uid="uid://d3u6ygxybivbl" path="res://scripts/camera_3d.gd" id="6_28h7d"]
[ext_resource type="Script" uid="uid://dety013hh0dfr" path="res://scripts/crates.gd" id="7_4uqe7"]
[ext_resource type="PackedScene" uid="uid://gpovwicalyqt" path="res://assets/wall.tscn" id="8_lluiq"]
[ext_resource type="PackedScene" uid="uid://bs72ogkvdd7d6" path="res://addons/proto_controller/proto_controller.tscn" id="9_53x7s"]
[ext_resource type="PackedScene" uid="uid://b8wwdsnym6tua" path="res://assets/kenney_castle-kit/Models/GLB format/tower-square.glb" id="10_fqo2v"]
[ext_resource type="PackedScene" uid="uid://cqd7a0jahgw53" path="res://assets/kenney_castle-kit/Models/GLB format/tower-square-top-roof.glb" id="11_5xcp4"]
[ext_resource type="PackedScene" uid="uid://d1qpi7hown5r3" path="res://assets/kenney_castle-kit/Models/GLB format/flag-pennant.glb" id="12_plh0m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j7rfl"]
render_priority = 0
shader = ExtResource("1_0bf2s")
shader_parameter/world_uv = false
shader_parameter/object_uv = false
shader_parameter/object_uv_scale = Vector2(1, 1)
shader_parameter/preset_color = 0
shader_parameter/base_color = Color(0, 0, 0, 1)
shader_parameter/metalic = 0.25
shader_parameter/roughness = 0.75
shader_parameter/grid_scale = 1.0
shader_parameter/grid_width = 0.01
shader_parameter/grid_color = Color(0.8, 0.8, 0.8, 1)
shader_parameter/inside_scale = 1.0
shader_parameter/inside_width = 0.01
shader_parameter/inside_color = Color(0.8, 0.8, 0.8, 0.8)
shader_parameter/checkered = true
shader_parameter/sub_checkered_grid = false
shader_parameter/checkered_color = Color(0.25, 0.25, 0.25, 1)
shader_parameter/checkered_blend_color = 0.1
shader_parameter/use_inside_uv = false
shader_parameter/use_albedo_color = false
shader_parameter/albedo_alpha = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k6ys0"]
render_priority = 0
shader = ExtResource("1_0bf2s")
shader_parameter/world_uv = false
shader_parameter/object_uv = false
shader_parameter/object_uv_scale = Vector2(1, 1)
shader_parameter/preset_color = 0
shader_parameter/base_color = Color(0, 0, 0, 1)
shader_parameter/metalic = 0.25
shader_parameter/roughness = 0.75
shader_parameter/grid_scale = 1.0
shader_parameter/grid_width = 0.01
shader_parameter/grid_color = Color(0.8, 0.8, 0.8, 1)
shader_parameter/inside_scale = 1.0
shader_parameter/inside_width = 0.145
shader_parameter/inside_color = Color(0.733044, 0, 0, 0.8)
shader_parameter/checkered = true
shader_parameter/sub_checkered_grid = false
shader_parameter/checkered_color = Color(0.925073, 0.202104, 0, 1)
shader_parameter/checkered_blend_color = 0.1
shader_parameter/use_inside_uv = false
shader_parameter/use_albedo_color = false
shader_parameter/albedo_alpha = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eb6dy"]
render_priority = 0
shader = ExtResource("1_0bf2s")
shader_parameter/world_uv = false
shader_parameter/object_uv = false
shader_parameter/object_uv_scale = Vector2(1, 1)
shader_parameter/preset_color = 0
shader_parameter/base_color = Color(0, 0, 0, 1)
shader_parameter/metalic = 0.25
shader_parameter/roughness = 0.75
shader_parameter/grid_scale = 1.0
shader_parameter/grid_width = 0.01
shader_parameter/grid_color = Color(0.8, 0.8, 0.8, 1)
shader_parameter/inside_scale = 1.0
shader_parameter/inside_width = 0.01
shader_parameter/inside_color = Color(0.8, 0.8, 0.8, 0.8)
shader_parameter/checkered = true
shader_parameter/sub_checkered_grid = false
shader_parameter/checkered_color = Color(0.25, 0.25, 0.25, 1)
shader_parameter/checkered_blend_color = 0.1
shader_parameter/use_inside_uv = false
shader_parameter/use_albedo_color = false
shader_parameter/albedo_alpha = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_trceg"]
render_priority = 0
shader = ExtResource("1_0bf2s")
shader_parameter/world_uv = false
shader_parameter/object_uv = false
shader_parameter/object_uv_scale = Vector2(1, 1)
shader_parameter/preset_color = 0
shader_parameter/base_color = Color(0, 0, 0, 1)
shader_parameter/metalic = 0.25
shader_parameter/roughness = 0.75
shader_parameter/grid_scale = 10.0
shader_parameter/grid_width = 0.01
shader_parameter/grid_color = Color(0.8, 0.8, 0.8, 1)
shader_parameter/inside_scale = 1.0
shader_parameter/inside_width = 0.01
shader_parameter/inside_color = Color(0.8, 0.8, 0.8, 0.8)
shader_parameter/checkered = true
shader_parameter/sub_checkered_grid = false
shader_parameter/checkered_color = Color(0.25, 0.25, 0.25, 1)
shader_parameter/checkered_blend_color = 0.1
shader_parameter/use_inside_uv = false
shader_parameter/use_albedo_color = false
shader_parameter/albedo_alpha = 0.5

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_t64i1"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_adbmc"]
sky_material = SubResource("ProceduralSkyMaterial_t64i1")

[sub_resource type="Environment" id="Environment_5rpew"]
background_mode = 2
sky = SubResource("Sky_adbmc")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="SphereShape3D" id="SphereShape3D_wljuq"]
radius = 2.5

[sub_resource type="BoxMesh" id="BoxMesh_tgcp3"]
size = Vector3(2, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_lis3h"]
size = Vector3(2, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_h73pm"]
size = Vector3(126.452, 32.7288, 1)

[sub_resource type="BoxMesh" id="BoxMesh_osj0f"]
size = Vector3(2, 2, 4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j0n76"]
albedo_color = Color(0.347006, 0.184528, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_yp1qk"]
material = SubResource("StandardMaterial3D_j0n76")
height = 0.2

[node name="Main" type="Node3D"]

[node name="ProtoController" parent="." instance=ExtResource("9_53x7s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.0152, 7.0512, -36.0643)
can_sprint = true
can_freefly = true
input_left = "mv_left"
input_right = "mv_right"
input_forward = "mv_fwd"
input_back = "mv_back"
input_jump = "jump"

[node name="RayCast3D" type="RayCast3D" parent="ProtoController"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 1.39558, 0)
target_position = Vector3(-2, 0, 0)

[node name="Level" type="Node" parent="."]

[node name="StartingPoint" type="CSGBox3D" parent="Level"]
use_collision = true
size = Vector3(100, 1, 100)
material = SubResource("ShaderMaterial_j7rfl")

[node name="CrashZone" type="CSGBox3D" parent="Level" groups=["floor"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -843.174, -1354.46)
use_collision = true
size = Vector3(100, 1, 330.172)
material = SubResource("ShaderMaterial_j7rfl")

[node name="TransitionRamp" type="CSGBox3D" parent="Level" groups=["floor"]]
transform = Transform3D(1.02128, 0, 0, 0, 0.97854, 0.292348, 0, -0.292348, 0.97854, -2.45542, -835.459, -1325.09)
use_collision = true
size = Vector3(122.607, 1, 65.7627)
material = SubResource("ShaderMaterial_j7rfl")

[node name="Ramp" type="CSGBox3D" parent="Level" groups=["floor"]]
transform = Transform3D(1, 0, 0, 0, 0.834627, 0.550816, 0, -0.550816, 0.834627, 0, -421.554, -685.268)
use_collision = true
size = Vector3(100, 1, 1529.08)
material = SubResource("ShaderMaterial_j7rfl")

[node name="LeftWall" type="CSGBox3D" parent="Level"]
transform = Transform3D(0.866026, -0.5, 0, 0.417424, 0.722999, 0.550481, -0.27524, -0.47673, 0.834848, -74.4594, -390.867, -705.499)
use_collision = true
size = Vector3(5.161, 100, 1529.08)
material = SubResource("ShaderMaterial_k6ys0")

[node name="RightWall" type="CSGBox3D" parent="Level"]
transform = Transform3D(0.866026, 0.5, 0, -0.417424, 0.722999, 0.550481, 0.27524, -0.47673, 0.834848, 72.1988, -395.978, -702.128)
use_collision = true
size = Vector3(5.161, 100, 1529.08)
material = SubResource("ShaderMaterial_k6ys0")

[node name="ObstacleSpawner" type="Node3D" parent="Level"]
script = ExtResource("2_i34kh")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="Level"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, -914.294, -1389.54)
use_collision = true

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Level/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 7.31632, -1.92305e-07)
radius = 5.0
height = 20.0
sides = 24
material = SubResource("ShaderMaterial_eb6dy")

[node name="CSGBox3D" type="CSGBox3D" parent="Level/CSGCombiner3D/CSGCylinder3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -4.12096e-07, 5.02823)
operation = 2
size = Vector3(11.1113, 10.2793, 23.3533)

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="Level/CSGCombiner3D/CSGCylinder3D"]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0)
operation = 2
radius = 5.0
height = 27.5605
sides = 24
material = SubResource("ShaderMaterial_trceg")

[node name="CSGBox3D" type="CSGBox3D" parent="Level/CSGCombiner3D/CSGCylinder3D/CSGCylinder3D2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -4.12096e-07, 5.02823)
operation = 2
size = Vector3(11.1113, 10.2793, 23.3533)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5rpew")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Sphere" type="RigidBody3D" parent="." groups=["sphere"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.5781, 3.26073, -44.8732)
mass = 2.0
gravity_scale = 2.0
script = ExtResource("4_vq85a")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sphere"]
shape = SubResource("SphereShape3D_wljuq")

[node name="Knight" parent="Sphere" instance=ExtResource("5_0d4o2")]
transform = Transform3D(1.6, 0, 0, 0, 1.6, 0, 0, 0, 1.6, 0, -1.97495, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.642788, 0.766045, 0, -0.766045, 0.642788, -19.5781, 56.2874, -15.0436)
script = ExtResource("6_28h7d")

[node name="Camera3D2" type="Camera3D" parent="."]
transform = Transform3D(0.99828, 0.0175305, -0.0559478, 0, 0.954253, 0.299002, 0.05863, -0.298488, 0.952611, 0.65984, -828.589, -1431.07)

[node name="Crates" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -43.776, -841.323, -1471.82)
script = ExtResource("7_4uqe7")

[node name="Crate1" type="RigidBody3D" parent="Crates"]
mass = 0.01

[node name="MeshInstance3D" type="MeshInstance3D" parent="Crates/Crate1"]
mesh = SubResource("BoxMesh_tgcp3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Crates/Crate1"]
shape = SubResource("BoxShape3D_lis3h")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PushLabel" type="Label" parent="UI/CenterContainer"]
layout_mode = 2

[node name="ResetLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 16.0
offset_top = 71.0
offset_right = 144.0
offset_bottom = 94.0
text = "Press 'R' to reset"

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 16.0
offset_right = 112.0
offset_bottom = 63.0
alignment = 1

[node name="SpeedLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Speed: 0"

[node name="ScoreLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Score: 0"

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -64.6353)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_h73pm")

[node name="Castle" type="Node" parent="."]

[node name="Walls2" type="Node3D" parent="Castle"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 45.4755, -836.432, -1455.23)

[node name="Wall" parent="Castle/Walls2" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -45, -6.24158, -0.629028)

[node name="Wall2" parent="Castle/Walls2" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -35, -6.24158, -0.629028)

[node name="Wall3" parent="Castle/Walls2" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -25, -6.24158, -0.629028)

[node name="Wall4" parent="Castle/Walls2" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -15, -6.24158, -0.629028)

[node name="Wall5" parent="Castle/Walls2" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -5, -6.24158, -0.629028)

[node name="Wall6" parent="Castle/Walls2" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 5, -6.24158, -0.629028)

[node name="Wall7" parent="Castle/Walls2" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 15, -6.24158, -0.629028)

[node name="Wall8" parent="Castle/Walls2" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 25, -6.24158, -0.629028)

[node name="Wall9" parent="Castle/Walls2" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 35, -6.24158, -0.629028)

[node name="Wall10" parent="Castle/Walls2" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 45, -6.24158, -0.629028)

[node name="Walls3" type="Node3D" parent="Castle"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -44.1984, -836.432, -1455.23)

[node name="Wall" parent="Castle/Walls3" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -45, -6.24158, -0.629028)

[node name="Wall2" parent="Castle/Walls3" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -35, -6.24158, -0.629028)

[node name="Wall3" parent="Castle/Walls3" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -25, -6.24158, -0.629028)

[node name="Wall4" parent="Castle/Walls3" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -15, -6.24158, -0.629028)

[node name="Wall5" parent="Castle/Walls3" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -5, -6.24158, -0.629028)

[node name="Wall6" parent="Castle/Walls3" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 5, -6.24158, -0.629028)

[node name="Wall7" parent="Castle/Walls3" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 15, -6.24158, -0.629028)

[node name="Wall8" parent="Castle/Walls3" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 25, -6.24158, -0.629028)

[node name="Wall9" parent="Castle/Walls3" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 35, -6.24158, -0.629028)

[node name="Wall10" parent="Castle/Walls3" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 45, -6.24158, -0.629028)

[node name="tower-square2" parent="Castle" instance=ExtResource("10_fqo2v")]
transform = Transform3D(45.7577, 0, 0, 0, 71.1787, 0, 0, 0, 45.7577, 0.496112, -842.734, -1450.42)

[node name="tower-square-top-roof2" parent="Castle" instance=ExtResource("11_5xcp4")]
transform = Transform3D(50, 0, 0, 0, 50, 0, 0, 0, 50, 1.04757, -755.857, -1448.32)

[node name="flag-pennant2" parent="Castle" instance=ExtResource("12_plh0m")]
transform = Transform3D(-2.80763, 0, -49.9211, 0, 50, 0, 49.9211, 0, -2.80763, 1.41036, -716.948, -1448.34)

[node name="Walls" type="Node3D" parent="Castle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -836.432, -1399.37)

[node name="Wall" parent="Castle/Walls" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -45, -6.24158, -0.629028)

[node name="Wall2" parent="Castle/Walls" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -35, -6.24158, -0.629028)

[node name="Wall3" parent="Castle/Walls" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -25, -6.24158, -0.629028)

[node name="Wall4" parent="Castle/Walls" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -15, -6.24158, -0.629028)

[node name="Wall5" parent="Castle/Walls" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -5, -6.24158, -0.629028)

[node name="Wall6" parent="Castle/Walls" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 5, -6.24158, -0.629028)

[node name="Wall7" parent="Castle/Walls" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 15, -6.24158, -0.629028)

[node name="Wall8" parent="Castle/Walls" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 25, -6.24158, -0.629028)

[node name="Wall9" parent="Castle/Walls" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 35, -6.24158, -0.629028)

[node name="Wall10" parent="Castle/Walls" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 45, -6.24158, -0.629028)

[node name="Walls4" type="Node3D" parent="Castle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -836.432, -1499.99)

[node name="Wall" parent="Castle/Walls4" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -45, -6.24158, -0.629028)

[node name="Wall2" parent="Castle/Walls4" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -35, -6.24158, -0.629028)

[node name="Wall3" parent="Castle/Walls4" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -25, -6.24158, -0.629028)

[node name="Wall4" parent="Castle/Walls4" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -15, -6.24158, -0.629028)

[node name="Wall5" parent="Castle/Walls4" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, -5, -6.24158, -0.629028)

[node name="Wall6" parent="Castle/Walls4" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 5, -6.24158, -0.629028)

[node name="Wall7" parent="Castle/Walls4" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 15, -6.24158, -0.629028)

[node name="Wall8" parent="Castle/Walls4" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 25, -6.24158, -0.629028)

[node name="Wall9" parent="Castle/Walls4" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 35, -6.24158, -0.629028)

[node name="Wall10" parent="Castle/Walls4" groups=["wall"] instance=ExtResource("8_lluiq")]
transform = Transform3D(-4.37114e-07, 0, -10, 0, 10, 0, 10, 0, -4.37114e-07, 45.0443, -6.54889, -1.13074)

[node name="UpgradeStation" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.69209, -41.4699)

[node name="Desk" type="MeshInstance3D" parent="UpgradeStation"]
transform = Transform3D(1.00207, 0, 0, 0, 1.00207, 0, 0, 0, 3.874, 0, 0, 0)
mesh = SubResource("BoxMesh_osj0f")
skeleton = NodePath("")

[node name="Label3D" type="Label3D" parent="UpgradeStation"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 4.90622, 0)
pixel_size = 0.04
text = "Upgrade Station (WIP)"

[node name="Label3D2" type="Label3D" parent="UpgradeStation"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.0108212, 2.21284, -4.09262)
pixel_size = 0.01
text = "Increase Speed"

[node name="Label3D3" type="Label3D" parent="UpgradeStation"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9.05301e-08, 2.27571, 2.07109)
pixel_size = 0.01
text = "Increase Size"

[node name="SpeedButton" type="MeshInstance3D" parent="UpgradeStation"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0332417, 1.05458, -4.06774)
mesh = SubResource("CylinderMesh_yp1qk")

[node name="SizeButton" type="MeshInstance3D" parent="UpgradeStation"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00121975, 1.10076, 2.47951)
mesh = SubResource("CylinderMesh_yp1qk")

[connection signal="body_entered" from="Area3D" to="Camera3D" method="_on_area_3d_body_entered"]
